--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "electron-forge": "^5.2.4",
     "electron-squirrel-startup": "^1.0.1",
+    "multer": "^2.0.2",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
